Добился прохождения всех тестов из джейсон файла. Теперь тесты((